syntax = "proto3";

package com.ben.smartcv.common;

option java_package = "com.ben.smartcv.common.cv";
option java_outer_classname = "CvProcessorProto";
option java_multiple_files = true;

import "job.service.proto";

message RawCvInfo {

    string object_key = 1;

    PreviewJobDescription preview_job = 2;

}

message ExtractedCvData {

    string name = 1;

    string email = 2;

    string phone = 3;

    repeated string educations = 4;

    repeated string skills = 5;

    repeated string experiences = 6;

    double score = 7;

}

service CvProcessor {

    rpc extractData (RawCvInfo) returns (ExtractedCvData) {
    }

}